fixade design overflow

--- a/frontend/elevate/src/index.css
+++ b/frontend/elevate/src/index.css
@@ -4,5 +4,10 @@
 
 html {
     scroll-behavior: smooth;
+
   }
+  html, body {
+    overflow-x: hidden;
+}
+
 
